mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-fn
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-fn
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-fn
    spec:
      containers:
      - image: mysql:8
        args:
          - "--default-authentication-plugin=mysql_native_password"
#          - "--ignore-db-dir"
        imagePullPolicy: IfNotPresent
        resources:
          limits: 
            cpu: "500m"
            memory: "1024Mi"
          requests:
            cpu: "500m"
            memory: "768Mi"
        volumeMounts:
        - name: mysql-fn
          mountPath: /var/lib/mysql
        name: mysql-fn
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
      volumes:
      - name: mysql-fn
        persistentVolumeClaim:
          claimName: mysql-fn-pvc
