wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-fn
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-fn
  template:
    metadata:
      labels:
        app: wordpress-fn
    spec:
      containers:
      - image: wordpress
        imagePullPolicy: IfNotPresent
        resources:
          limits: 
            cpu: "300m"
            memory: "512Mi"
          requests:
            cpu: "150m"
            memory: "256Mi"
        volumeMounts:
        - name: wordpress-fn
          mountPath: /var/www/html
        - name: wordpress-fn-config
          mountPath: /usr/local/etc/php/conf.d/docker-uploads.ini
          subPath: docker-uploads.ini
        name: wordpress-fn
        ports:
        - containerPort: 80
          name: wordpress
          protocol: TCP
      volumes:
      - name: wordpress-fn
        persistentVolumeClaim:
          claimName: wordpress-fn-pvc
      - name: wordpress-fn-config
        configMap: 
          name: wordpress-fn-config
