wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-fn-svc
  namespace: default
  labels:
    service: wordpress-fn-svc
spec:
  type: ClusterIP
  selector:
    app: wordpress-fn
  ports:
  - name: wordpress
    port: 80
    protocol: TCP
    targetPort: 80
