wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-fn-ingress
spec:
  rules:
    - host: xxx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-fn-svc
                port:
                  number: 80
